fix: navbar overflow in .nav-container during button activation

--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -8,7 +8,6 @@ body {
     background: var(--background-color);
     margin: 0;
     font-family: $base-font-family;
-    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
