--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -2,7 +2,7 @@
     display: flex;
     place-content: space-between;
     padding: 1.3em;
-    overflow: visible;
+    overflow: hidden;
     z-index: 2;
     top: 0px;
     position: sticky;
